# vworld

./: .gitignore  Cargo.toml  DESIGN.md  INSTALL.md  LEARNINGS.md  LICENSE  README.md  SKILL.md  build.rs  install.ps1  install.sh
.github/workflows/: release.yml  test-install-windows.yml  test-install.yml
docs/: 3d-analysis-samples.md
plan/: 2026-06-18-08:35:18-wms-getmap-bugfix.md  2026-06-18-09:30:53-2dmap-19samples.md  2026-06-18-13:01:19-2dmap-잔여검증구현.md  2026-06-18-13:51:06-3dmap3-34samples.md  2026-06-19-00:14:35-ned-115-요청변수-완전구현.md  2026-06-19-01:34:18-지적도-반경수집-dxf생성.md  2026-06-19-06:48:15-2d데이터-158레이어-레지스트리.md  2026-06-19-07:41:27-크로스빌드-skill연결.md  2026-07-16-12-17-49-vworld-전명령-테스트계획.md  open-questions.md
references/data/: ned_params.tsv  twod_catalog.tsv  twod_seed.tsv
references/docs/: USAGE.md  haengjeong_api.md
scripts/: build-all.sh  fetch_2ddata_layers.py  fetch_3dmap3_samples.py  install.ps1  install.sh  scrape_ned_params.py  uninstall.ps1  uninstall.sh
scripts/.2ddata_cache/: LP_PA_CBND_BUBUN.json  LT_C_ADEMD_INFO.json  LT_C_ADRI_INFO.json  LT_C_ADSIDO_INFO.json  LT_C_ADSIGG_INFO.json  LT_C_AGRIXUE101.json  LT_C_AGRIXUE102.json  LT_C_AISACMC.json  LT_C_AISADZC.json  LT_C_AISALTC.json  LT_C_AISATZC.json  LT_C_AISCATC.json  LT_C_AISCTRC.json  LT_C_AISDNGC.json  LT_C_AISFIRC.json  LT_C_AISFLDC.json  LT_C_AISMOAC.json  LT_C_AISPCA.json  LT_C_AISPRHC.json  LT_C_AISRESC.json  LT_C_AISRFLC.json  LT_C_AISTMAC.json  LT_C_AISUAC.json  LT_C_ASITDEEPSOIL.json  LT_C_ASITSOILDEP.json  LT_C_ASITSOILDRA.json  LT_C_ASITSURSTON.json  LT_C_BLDGINFO.json  LT_C_DAMDAN.json  LT_C_DAMYOD.json  LT_C_DAMYOJ.json  LT_C_DAMYUCH.json  LT_C_DESCH.json  LT_C_DGMAINBIZ.json  LT_C_DHSCH.json  LT_C_DMSCH.json  LT_C_DOGPARK.json  LT_C_EADIST.json  (+120 more)
skills/: INSTALL.md  LEARNINGS.md  SKILL.md
src/: dxf.rs  geomath.rs  hjd_db.rs  hjd_shp.rs  main.rs  ned_registry.rs  shp.rs  twod_registry.rs  update.rs
test/: 3dsim_analysis_test_stories.md
(+73 files in other folders)
